Preload all flags before starting games
